--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -6,7 +6,7 @@
     .grid-3.alpha
       = sortable 'name', t('user.name')
     .grid-3
-      = sortable t('user.email')
+      = sortable 'email', t('user.email')
       -#= link_to 'email',:sort => "email"
     .grid-3
       'Firma
