--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -13,7 +13,8 @@
 	        = link_to t('admin.edit'), edit_page_path(@welcome), :class => 'button'
 		
         = link_to 'FIND OS PÅ KORT', googlemap_index_path
-
+        br
+        = link_to 'Galleri', gallery_index_path
 
 
   .squared-box
