js added to campany#show

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -185,3 +185,47 @@ a:hover {
 	min-height: 1px;
 	width: 30px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.demo-show {
+
+
+}
+.demo-show h3 {
+  margin: 0;
+  padding: .25em;
+  background: #bfcd93;
+  border-top: 1px solid #386785;
+  border-bottom: 1px solid #386785;
+
+}
+.demo-show div {
+  padding: .5em .25em;
+}
+
+
+
+
+
+
+
