--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -1,4 +1,5 @@
 
+	 
 .squared-box
   .borders
     .menu-box
@@ -6,7 +7,13 @@
     .content
       h1
         = @company.title
-      =raw @company.body
+      - if @company.body.length > 500
+        .demo-show
+          'alsdjf asldjkf aslædjf alæsdjf alæsdjf 
+          unfold
+            'read more...
+          div =raw @company.body
+          
       .tlf-box
         .tlf-content
 	      | T: 
@@ -35,3 +42,9 @@
       
 br
 = render :partial => "shared/news", :locals => { :newsposts => @newsposts }
+
+
+
+
+
+
