--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -187,30 +187,6 @@ a:hover {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.demo-show {
-
-
-}
 .demo-show h3 {
   margin: 0;
   padding: .25em;
@@ -221,6 +197,7 @@ a:hover {
 }
 .demo-show div {
   padding: .5em .25em;
+  display:none;
 }
 
 
