--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -48,7 +48,7 @@
     = f.time_select :endtime
     .grid-5.alpha.omega.top-margin
 	br
-	'Deltagere: 
+	'Deltagerer: 
     br
     .grid-2.alpha
       = f.text_field :attendees, :size=> 6
