--- a/app/views/bookings/show.html.slim
+++ b/app/views/bookings/show.html.slim
@@ -21,7 +21,7 @@
           
           br
           = @booking.attendees
-          '&nbsp; deltagerer
+          '&nbsp; deltagere
           
           -if @booking.coffee_and_tea?
             br
