--- a/app/views/photos/index.html.slim
+++ b/app/views/photos/index.html.slim
@@ -16,8 +16,8 @@
               br
               = link_to 'slet', photo, :confirm => 'Are you sure?', :method => :delete
         .grid-5.alpha.omega.edit
-          = link_to 'opret photo', new_photo_path, :class => 'button'
-          = link_to 'galleri', gallery_index_path, :class => 'button'
+          -#= link_to 'opret photo', new_photo_path, :class => 'button'
+          -#= link_to 'galleri', gallery_index_path, :class => 'button'
       -else
         'no access
   .squared-box
