--- a/app/views/admin/index.html.slim
+++ b/app/views/admin/index.html.slim
@@ -20,8 +20,7 @@
               li = link_to 'virksomheder' , companies_path
               li = link_to "reservationer" , bookings_path
               li = link_to "sider" , info_pages_path
-              li = link_to "galleri" , gallery_index_path
-              li = link_to "photos" , photos_path
+              li = link_to "gallerier" , galleries_path
           -else
             'no access
   .squared-box
