--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@photo, :html => { :multipart => true }) do |f|%>
+<%= form_for([@gallery, @photo], :html => { :multipart => true }) do |f|%>
   <% if @photo.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@photo.errors.count, "error") %> prohibited this photo from being saved:</h2>
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-
+  <%= f.hidden_field :gallery_id, :value => @photo.gallery_id%>
   <div class="field">
     <%= f.label :title %><br />
     <%= f.text_field :title %>
