photos link on admin page

--- a/app/views/admin/index.html.slim
+++ b/app/views/admin/index.html.slim
@@ -21,6 +21,7 @@
               li = link_to "reservationer" , bookings_path
               li = link_to "sider" , info_pages_path
               li = link_to "gallerier" , galleries_path
+              li = link_to "photos" , photos_path 
           -else
             'no access
   .squared-box
