history gallery link added

--- a/app/views/history/index.html.slim
+++ b/app/views/history/index.html.slim
@@ -14,6 +14,9 @@
           = link_to 'læs mere', all_history_index_path(@history)
         - else
           =raw @history.body   
+        br
+        br
+        = link_to 'Galleri', gallery_path(@gallery)
 
 	    - if can?(:edit, @history)
 	      .text-right
