--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -6,6 +6,7 @@
 @import "compass/reset";
 @import "960/grid";
 @import "compass/css3/border-radius";
+@import "compass/css3/opacity";
 
 $ninesixty-columns: 12; // default: 12
 $ninesixty-grid-width: 960px; // default: 960px
@@ -223,12 +224,9 @@ $ninesixty-gutter-width: 20px; // default: 20px
 	.content-company{
 		height:280px;
 		.pagination {
-
 			text-align:center;
 			@include grid(4);
 			margin-top: 10px;
-
-
 		}
 	}
 }
@@ -292,6 +290,7 @@ $ninesixty-gutter-width: 20px; // default: 20px
 }
 
 .squared-box{
+	
 	position:relative;
 	background-color:#fff;
     margin-top:36px;
@@ -322,14 +321,22 @@ $ninesixty-gutter-width: 20px; // default: 20px
 		height:376px;
 	}
 	.tlf-box{
-		text-align:center;
+		text-align:right;
+	//	opacity:0.2;
+	
 		background-color:#ddd;
 		border-style:solid;
 		border-width:1px;
 		margin-bottom:8px;
 		display:inline;
+		position:absolute;
+		left:100px;
+		top:100px;
+		height:60px;
+		width:300px;
+		
+		
 		.tlf-content{
-			
 			text-align:left;
 		}
 		.web-content{
@@ -337,6 +344,49 @@ $ninesixty-gutter-width: 20px; // default: 20px
 		}
 	}
 }
+
+.company-image-box{
+	
+	position:relative;
+	background-color:#fff;
+    margin-top:36px;
+	@include grid(6);
+	min-height:376px;
+	display:block;
+	overflow:hidden;
+	
+	text-align:right;
+	.borders{
+		border-style:solid;
+		border-width:1px;
+		min-height:376px;
+		display:block;
+		overflow:hidden;
+	}
+
+
+	
+	.tlf-box{
+
+		@include opacity(0.8);
+	
+		background-color:#ddd;
+		border-style:solid;
+		border-width:1px;
+		margin-bottom:8px;
+		position:absolute;
+		top:300px;
+		right:0;
+		padding:8px;
+		a{
+			color:#000;
+			text-transform: uppercase;
+		}
+
+	}
+}
+
+
 
 .fixed-height{
 	height:376px;
@@ -441,6 +491,7 @@ $ninesixty-gutter-width: 20px; // default: 20px
 		}
 	}	
 }
+
 .text-right{
 	text-align: right;
 }
@@ -644,5 +695,7 @@ a:hover{
 		height:376px;
 	}
 }
+
+
 
 
