booking date added as field to bookings

--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -22,7 +22,7 @@
     .field.booking-date
       | Dato:
       br
-      = f.date_select :created_at, :value => l((@booking.created_at || Date.today).to_date), :readonly => true, :size=>12
+      = f.date_select :booking_date, :value => l((@booking.booking_date || Date.today).to_date), :readonly => true, :size=>12
     
     .meetingrooms.top-margin
       - Meetingroom.all.each do |meetingroom|
