--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -27,43 +27,14 @@
   
   
         
-  .company-image-box
+  .squared-box
     .borders.fixed-height
       = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
-      .tlf-box
-        'T: 
-        = @company.phone 
-        '&nbsp;|&nbsp;
-        =raw @link
       
-        
-.bottom-box
-  .borders
-    .left-side
-      .menu-box
-        .menu-back
-          h2
-            | NYHEDER
-    - @newsposts.each do |newspost|
-      .news
-        .content
-          .header
-            h1
-              = link_to newspost.title, newspost
-            .gray
-              = l newspost.created_at, :format => :date_month_and_year
-          =raw excerpt(newspost.body, '', :radius => 160)
-          br /
-          - if newspost.body != nil && newspost.body.length > 160
-            = link_to 'læs mere', newspost_path(newspost)
-  
-          - if can?(:edit, newspost)
-            - if newspost.body != nil
-              - if newspost.body.length > 160
-                |  | 
-              = link_to 'rediger', edit_newspost_path(newspost)
-= will_paginate @newsposts
-
+      
+      
+br
+= render :partial => "shared/news", :locals => { :newsposts => @newsposts }
 
 
 
