--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -44,4 +44,6 @@ html
                 = link_to info_page.title, info_page
 
         = yield
+      .container_12
+        = render :partial => "shared/news", :locals => { :newsposts => @newsposts }
         .clear
