--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -27,7 +27,7 @@
   
   
         
-  .squared-box
+  .company-image-box
     .borders.fixed-height
       = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
       .tlf-box
