--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -221,6 +221,7 @@ $ninesixty-gutter-width: 20px; // default: 20px
 
 .content{
 	margin: 20px;
+	position:relative;
 	.content-company{
 		height:280px;
 		.pagination {
@@ -363,12 +364,8 @@ $ninesixty-gutter-width: 20px; // default: 20px
 		overflow:hidden;
 	}
 
-
-	
 	.tlf-box{
-
 		@include opacity(0.8);
-	
 		background-color:#ddd;
 		border-style:solid;
 		border-width:1px;
@@ -395,6 +392,7 @@ $ninesixty-gutter-width: 20px; // default: 20px
 	@include grid(12);
 	background-color:#fff;
   margin-top:22px;
+	margin-left:10px;
 	height:186px;
 	width:940px;
 	display:block;
